@@ -1,6 +1,8 @@
 == Version 2.6.5 - Unreleased
 
 * #1003 - Fix decoding some b encoded headers on specific rubies that don't account for lack of base64 padding (kjg)
+* #929 - Fix double-quoting in display names (garethrees)
+* #1017 - Fix double-quoting in display names (garethrees)
 
 == Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>
 
